Convert OSGi module (had to disable mock-based tests tho)